Fix accidental horizontal scrolling

--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -3,6 +3,7 @@
 #Header {
   color: $primary-text-color;
   text-align: center;
+  overflow: hidden;
   width: 120%;
   background-color: $secondary-bg-color;
   border-bottom-right-radius: 100%;
